obfuscator/parser/ObfuMiniCParser.py
# Generated from ObfuMiniC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ObfuMiniCParser ( Parser ):

    grammarFileName = "ObfuMiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'switch'", "'goto'", "':'", "'case'", 
                     "'default'", "'&'", "'||'", "'&&'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'char'", "'bool'", "'printf'", "'scanf'", 
                     "'while'", "'for'", "'if'", "'else'", "'return'", "'('", 
                     "')'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOL", "CHAR", "STRING", 
                      "INT", "CHAR_TOK", "BOOL_TOK", "PRINTF", "SCANF", 
                      "WHILE", "FOR", "IF", "ELSE", "RETURN", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", "NUMBER", 
                      "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_funcDef = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_varDecl = 4
    RULE_initList = 5
    RULE_init = 6
    RULE_type = 7
    RULE_blockStmt = 8
    RULE_stmt = 9
    RULE_switchStmt = 10
    RULE_gotoStmt = 11
    RULE_labelStmt = 12
    RULE_switchBlock = 13
    RULE_caseBlock = 14
    RULE_defaultBlock = 15
    RULE_literal = 16
    RULE_exprStmt = 17
    RULE_ifStmt = 18
    RULE_loopStmt = 19
    RULE_returnStmt = 20
    RULE_ioStmt = 21
    RULE_expr = 22
    RULE_assignExpr = 23
    RULE_logicOrExpr = 24
    RULE_logicAndExpr = 25
    RULE_equalityExpr = 26
    RULE_relationalExpr = 27
    RULE_addExpr = 28
    RULE_mulExpr = 29
    RULE_unaryExpr = 30
    RULE_primaryExpr = 31
    RULE_argList = 32

    ruleNames =  [ "compilationUnit", "funcDef", "paramList", "param", "varDecl", 
                   "initList", "init", "type", "blockStmt", "stmt", "switchStmt", 
                   "gotoStmt", "labelStmt", "switchBlock", "caseBlock", 
                   "defaultBlock", "literal", "exprStmt", "ifStmt", "loopStmt", 
                   "returnStmt", "ioStmt", "expr", "assignExpr", "logicOrExpr", 
                   "logicAndExpr", "equalityExpr", "relationalExpr", "addExpr", 
                   "mulExpr", "unaryExpr", "primaryExpr", "argList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    BOOL=22
    CHAR=23
    STRING=24
    INT=25
    CHAR_TOK=26
    BOOL_TOK=27
    PRINTF=28
    SCANF=29
    WHILE=30
    FOR=31
    IF=32
    ELSE=33
    RETURN=34
    LPAREN=35
    RPAREN=36
    LBRACE=37
    RBRACE=38
    SEMI=39
    COMMA=40
    NUMBER=41
    ID=42
    WS=43
    LINE_COMMENT=44
    BLOCK_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ObfuMiniCParser.EOF, 0)

        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.FuncDefContext,i)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.VarDeclContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = ObfuMiniCParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 234881024) != 0):
                self.state = 68
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.funcDef()
                    pass

                elif la_ == 2:
                    self.state = 67
                    self.varDecl()
                    pass


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(ObfuMiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ObfuMiniCParser.TypeContext,0)


        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ObfuMiniCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ObfuMiniCParser.RPAREN, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.BlockStmtContext,0)


        def paramList(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ParamListContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = ObfuMiniCParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.type_()
            self.state = 76
            self.match(ObfuMiniCParser.ID)
            self.state = 77
            self.match(ObfuMiniCParser.LPAREN)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 234881024) != 0):
                self.state = 78
                self.paramList()


            self.state = 81
            self.match(ObfuMiniCParser.RPAREN)
            self.state = 82
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.ParamContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ObfuMiniCParser.COMMA)
            else:
                return self.getToken(ObfuMiniCParser.COMMA, i)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = ObfuMiniCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.param()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 85
                self.match(ObfuMiniCParser.COMMA)
                self.state = 86
                self.param()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ObfuMiniCParser.TypeContext,0)


        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ObfuMiniCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.type_()
            self.state = 93
            self.match(ObfuMiniCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ObfuMiniCParser.TypeContext,0)


        def initList(self):
            return self.getTypedRuleContext(ObfuMiniCParser.InitListContext,0)


        def SEMI(self):
            return self.getToken(ObfuMiniCParser.SEMI, 0)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ObfuMiniCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.type_()
            self.state = 96
            self.initList()
            self.state = 97
            self.match(ObfuMiniCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.InitContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.InitContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ObfuMiniCParser.COMMA)
            else:
                return self.getToken(ObfuMiniCParser.COMMA, i)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_initList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitList" ):
                listener.enterInitList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitList" ):
                listener.exitInitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitList" ):
                return visitor.visitInitList(self)
            else:
                return visitor.visitChildren(self)




    def initList(self):

        localctx = ObfuMiniCParser.InitListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.init()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 100
                self.match(ObfuMiniCParser.COMMA)
                self.state = 101
                self.init()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit" ):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = ObfuMiniCParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(ObfuMiniCParser.ID)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 108
                self.match(ObfuMiniCParser.T__0)
                self.state = 109
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ObfuMiniCParser.INT, 0)

        def CHAR_TOK(self):
            return self.getToken(ObfuMiniCParser.CHAR_TOK, 0)

        def BOOL_TOK(self):
            return self.getToken(ObfuMiniCParser.BOOL_TOK, 0)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = ObfuMiniCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 234881024) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ObfuMiniCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ObfuMiniCParser.RBRACE, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.VarDeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_blockStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)




    def blockStmt(self):

        localctx = ObfuMiniCParser.BlockStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(ObfuMiniCParser.LBRACE)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 7344392175628) != 0):
                self.state = 117
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [25, 26, 27]:
                    self.state = 115
                    self.varDecl()
                    pass
                elif token in [2, 3, 16, 17, 21, 22, 23, 24, 28, 29, 30, 31, 32, 34, 35, 37, 39, 41, 42]:
                    self.state = 116
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(ObfuMiniCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprStmtContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.BlockStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.IfStmtContext,0)


        def loopStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.LoopStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ReturnStmtContext,0)


        def ioStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.IoStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.SwitchStmtContext,0)


        def gotoStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.GotoStmtContext,0)


        def labelStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.LabelStmtContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ObfuMiniCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.exprStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.blockStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.loopStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.returnStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.ioStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                self.switchStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 131
                self.gotoStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 132
                self.labelStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ObfuMiniCParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ObfuMiniCParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(ObfuMiniCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ObfuMiniCParser.RBRACE, 0)

        def switchBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.SwitchBlockContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.SwitchBlockContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_switchStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStmt" ):
                listener.enterSwitchStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStmt" ):
                listener.exitSwitchStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchStmt" ):
                return visitor.visitSwitchStmt(self)
            else:
                return visitor.visitChildren(self)




    def switchStmt(self):

        localctx = ObfuMiniCParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ObfuMiniCParser.T__1)
            self.state = 136
            self.match(ObfuMiniCParser.LPAREN)
            self.state = 137
            self.expr()
            self.state = 138
            self.match(ObfuMiniCParser.RPAREN)
            self.state = 139
            self.match(ObfuMiniCParser.LBRACE)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 140
                self.switchBlock()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(ObfuMiniCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GotoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def SEMI(self):
            return self.getToken(ObfuMiniCParser.SEMI, 0)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_gotoStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotoStmt" ):
                listener.enterGotoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotoStmt" ):
                listener.exitGotoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotoStmt" ):
                return visitor.visitGotoStmt(self)
            else:
                return visitor.visitChildren(self)




    def gotoStmt(self):

        localctx = ObfuMiniCParser.GotoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_gotoStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(ObfuMiniCParser.T__2)
            self.state = 149
            self.match(ObfuMiniCParser.ID)
            self.state = 150
            self.match(ObfuMiniCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_labelStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelStmt" ):
                listener.enterLabelStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelStmt" ):
                listener.exitLabelStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStmt" ):
                return visitor.visitLabelStmt(self)
            else:
                return visitor.visitChildren(self)




    def labelStmt(self):

        localctx = ObfuMiniCParser.LabelStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_labelStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(ObfuMiniCParser.ID)
            self.state = 153
            self.match(ObfuMiniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchBlockContext(ParserRuleContext):
        __slots__ = 'parser'
